# kukanilea

./: .cursorrules  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DEV_CI_2000X_REPORT.md  GEMINI.md  LEGAL.md  MASTER_CODEX_CONTROL.md  MEMORY.md  Makefile  ONBOARDING.md  OPS_RELEASE_2000X_REPORT.md  PACKAGING.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  README_FIXED10.md  README_RELEASE.md  README_SCOPE.md  RELEASE_READINESS_CURRENT_MAIN.md  REPORT_AI_AVAILABILITY.md  REPORT_BENCH_STABILITY.md  REPORT_DISTRIBUTION.md  REPORT_HARDENING_DISTRIBUTION.md  REPORT_HARDENING_E2E.md  REPORT_HARDENING_SECURITY.md  REPORT_HARDENING_UPDATE_ROLLBACK.md  REPORT_PROVENANCE.md  REPORT_RC_ENDURANCE_60M.md  REPORT_SBOM.md  REPORT_SECURITY_CHECKS.md  REPORT_SECURITY_SCAN_REMEDIATION.md  REPORT_UPDATE_ROLLBACK.md  ROADMAP.md  STATUS_BEWERTUNG_2026-03-04.md  (+45 more)
.gemini/: system.md
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  pip-audit.ignore
app/: __init__.py  api.py  auth.py  authz.py  bootstrap.py  config.py  database.py  db.py  db_monitor.py  demo_data.py  desktop.py  errors.py  event_id_map.py  hardware.py  license.py  license_state.py  lifecycle.py  log_config.py  log_utils.py  logging.py  logging_json.py  logging_utils.py  metrics.py  mia_audit.py  observability.py  ollama_runtime.py  rate_limit.py  security.py  security_ua_hash.py  seeder.py  session.py  smoke.py  startup_maintenance.py  timeout.py  update.py  update_check.py  update_checker.py  version.py  verticals.py  web.py  (+1 more)
archive_legacy/: dev_reset_users.py  kukanilea_api.py  kukanilea_server.py  kukanilea_upload.py
assets/: README.md  icon.icns
contracts/: CORE_TOOL_INTERFACE.md  openapi.yaml
docker/: Dockerfile  backend.Dockerfile  docker-compose.hub.yml  docker-compose.yml  frontend.Dockerfile
docs/: AGENT_ASSIGNMENT_PROMPT_SHARED_ONLY.md  AGENT_SYNC_PROMPT.md  AI_PROVIDERS.md  AI_SETUP.md  ANWEISUNG_KI_SYNC_FLEET11.md  ARCHITECTURE.md  ARCHITECTURE_NOTES.md  ARCHITECTURE_P2P_SYNC.md  AUTOMATION_BUILDER.md  AUTO_UPDATE.md  BENCHMARK_BACKLOG_ISSUES.md  BENCHMARK_COMPETITORS_2026Q1.md  BETA_ROLLOUT_PLAN.md  CODEX_PROJECT_ASSIGNMENTS.md  COMPLIANCE_EU_DE_FOR_FEATURES.md  COMPLIANCE_HANDBOOK.md  COMPLIANCE_REPORT.md  CONFIGURATION.md  CONNECTORS_CALENDAR.md  CONNECTORS_EMAIL.md  CONNECTORS_WHATSAPP.md  CONSTITUTION.md  CROSS_PLATFORM_PARITY_MATRIX.md  DEPENDENCY_EXCEPTION_POLICY.md  DESIGN_SYSTEM.md  DOMAIN.md  EINVOICING_ROADMAP_DE.md  ENGINEERING_PROMPTS_DOMAINS_1_10.md  EVIDENCE_PACK_SCHEMA.md  FLEET_11_PRIORITY_COMMAND_CENTER.md  FLEET_COMMANDER_MULTI_DOMAIN_SETUP.md  FORENSIC_ANALYSIS_2026-02-28.md  FORENSIC_ANALYSIS_ADDENDUM_2026-02-28.md  FOUNDATION_PROCESS_NOTE.md  GEMINI_CLI_FALLBACK.md  GLOSSARY.md  HANDOFF_GEMINI_CONTINUATION_2026-03-01.md  INCIDENT_RESPONSE_72H.md  KUKANILEA_SYSTEM.md  LAUNCH_EVIDENCE_CHECKLIST.md  (+86 more)
instance/: agent_events.jsonl  hardware_profile.json  license_Pilot_Kunde_Zero.json
kukanilea/: .gitignore  config.py  contracts.py  guards.py  idempotency.py  llm.py  provenance.py
license_server/: README.md  app.py  generate_excel.py  licenses.xlsx  main.py  server.py
(+2233 files in other folders)
