[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kukanilea"
version = "1.0.0-beta.2"
description = "Local-first KUKANILEA document and agent MVP"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "flask",
  "requests",
  "python-dotenv",
  "pydantic",
  "rapidfuzz",
  "waitress",
  "platformdirs",
  "cryptography",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["app*", "kukanilea*"]
exclude = ["tests*", "archive*", "nousage*", "reports*", "instance*"]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
exclude = ["archive/legacy"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app", "kukanilea"]
