[project]
name = "kukanilea"
version = "0.1.0"
description = "Local-first Business OS for operational teams"
authors = [
    { name = "Kukanilea Engineering", email = "engineering@kukanilea.local" }
]
dependencies = [
    "fastapi",
    "uvicorn",
    "jinja2",
    "htmx-py",
    "pydantic",
    "sqlite3",
    "python-multipart",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "S", "I", "UP"]
ignore = ["S101"]  # S101: allow asserts in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-ra -q"

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv", ".build_venv", "dist"]
skips = ["B101"]  # B101: allow assert in non-production-only paths
